--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <article class="card card1">
           <img
-            src="/images/icon-sedans.svg"
+            src="images/icon-sedans.svg"
             class="card__header"
             alt="sedans image"
           />
@@ -48,7 +48,7 @@
 
         <article class="card card2">
           <img
-            src="/images/icon-suvs.svg"
+            src="images/icon-suvs.svg"
             class="card__header"
             alt="suvs image"
           />
@@ -62,7 +62,7 @@
 
         <article class="card card3">
           <img
-            src="/images/icon-luxury.svg"
+            src="images/icon-luxury.svg"
             class="card__header"
             alt="luxury image"
           />
