--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container">
-      <section>
+      <section aria-label="mainSection">
         <article class="card card1">
           <img
             src="images/icon-sedans.svg"
